--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -12,6 +12,7 @@ $black-bezel: #656565;
 //Bodys
 $device-black: #1e1e1e;
 $device-white: #fafafa;
+$blueprint: black;
 
 //Parts
 $camera: #3c3d3d;
